[tool.poetry]
name = "dice-rollers"
version = "0.1.0"
description = ""
authors = ["Abhishek Verma <abhi.verma9420@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
